<resources>
    <string name="app_name">FoodCount</string>
    <string name="CustomerName">Customer Name</string>
    <string name="Age">Age</string>
    <string name="CustomerActive">Customer Active</string>
    <string name="ViewAll">View All</string>
    <string name="Add">Add</string>
    <string name="welcomeString">Welcome in our recipe journal!</string>
    <string name="welcomAskQuestion">We want you to provide us basic information.</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="birthDate">Birth Date: 01.01.2000</string>
    <string name="Email">Email</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="Save">Save</string>
    <string name="Back">Back</string>
    <string name="Search">Search</string>
    <string name="ProductName">Product Name</string>
    <string name="Calories">Calories</string>
    <string name="Proteins">Proteins</string>
    <string name="Carbs">Carbs</string>
    <string name="Fat">Fat</string>
    <string name="addImage">Add Image</string>
    <string name="drawImage">Draw Image</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>